# LOTUS

./: .gitignore  1st-lotus_index.json  1st-lotus_index.md  ANALYSIS_SUMMARY.txt  APRIEL_INTEGRATION_PLAN.md  DEPLOYMENT_GUIDE.md  Debugging-commands-redis-streams-logs.md  Enhancements-From-ChattLLM-For-extensibility.md  FINAL_STATUS.md  LOTUS-REAL-SERVICES-INSTRUCTION-MAP.md  LOTUS_CIRCULAR_DEPS_ANALYSIS.md  MERGE_RESOLUTION_GUIDE.md  Phase-1.md  PresenceOS_kernel.py  README.md  READ_ME_FIRST_ANALYSIS.md  VENV_README.md  VISION_INTEGRATION.md  WORK_COMPLETED_SUMMARY.md  aetherpro.py  ash_config_suggestions.json  boot-log-10-17-2025-13:30.md  cli.py  fix_imports.py  grok-advice.md  index-project.py  integration_fixer_session_7.py  integration_test_session_7.py  pyproject.toml  quick_resolve.sh  requirements-api.txt  resolve_merge.sh  run_api.py  run_lotus.sh  vercel.json
PROJECT_BUILD_DOCS/: 00_README_FIRST.md  AI_Agent_Deployment_Strategy.md  Architecture.md  BUILD_SUMMARY.md  Build_Status.md  Completion_Summary.md  Datacenter-Private-Opensource-Business-Plan-Important.md  Executive_Summary.md  INDEX.md  Integration_Session_4.md  Integration_Session_6_Checklist.md  Memeory_Integration_Guide.md  Project_Session_6_Overview.md  Project_Structure.md  Quick_Reference_Session_6.md  Quick_Start.md  Quick_Start_Session_7.md  README_SESSION_2.md  README_SESSION_2_ALL_MODULES.md  README_Session_1.md  SESSION_1_SUMMARY.md  SESSION_4_COMPLETION.md  START_HERE.md  Session_2_Quick_Start.md  Session_2_Summary.md  Session_3_README.md  Session_3_Summary.md  Session_4_README.md  (+12 more)
(+342 files in other folders)
