[project]
name = "lotus"
version = "0.1.0"
description = "LOTUS - Async Event-Driven AI Architecture"
authors = [
    {name = "LOTUS Team"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asyncio",
    "redis>=5.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "aioredis>=2.0.0",

    # API Layer (FastAPI)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "gunicorn>=21.2.0",

    # LLM providers
    "anthropic>=0.18.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",

    # Memory system
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # Vision utilities
    "mss>=9.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lotus"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["lotus/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
